roomblock: 0.0.2-0 in 'kinetic/distribution.yaml' [bloom] (#14950)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5535,6 +5535,27 @@ repositories:
       url: https://github.com/ros-aldebaran/romeo_virtual.git
       version: master
     status: developed
+  roomblock:
+    doc:
+      type: git
+      url: https://github.com/tork-a/roomblock.git
+      version: master
+    release:
+      packages:
+      - roomblock
+      - roomblock_bringup
+      - roomblock_description
+      - roomblock_mapping
+      - roomblock_navigation
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/tork-a/roomblock-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/tork-a/roomblock.git
+      version: master
+    status: developed
   ros:
     doc:
       type: git
