jsk_apc: 3.0.0-0 in 'indigo/distribution.yaml' [bloom] (#14923)

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -4981,10 +4981,12 @@ repositories:
       - jsk_apc
       - jsk_apc2015_common
       - jsk_apc2016_common
+      - jsk_arc2017_baxter
+      - jsk_arc2017_common
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/tork-a/jsk_apc-release.git
-      version: 2.0.0-0
+      version: 3.0.0-0
     source:
       test_commits: false
       type: git
