octomap_ros: 0.4.0-1 in 'lunar/distribution.yaml' [bloom] (#14978)

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1114,6 +1114,21 @@ repositories:
       url: https://github.com/OctoMap/octomap_msgs.git
       version: lunar-devel
     status: maintained
+  octomap_ros:
+    doc:
+      type: git
+      url: https://github.com/OctoMap/octomap_ros.git
+      version: lunar-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/octomap_ros-release.git
+      version: 0.4.0-1
+    source:
+      type: git
+      url: https://github.com/OctoMap/octomap_ros.git
+      version: lunar-devel
+    status: maintained
   ompl:
     doc:
       type: hg
