Adding my_repo_name to documentation index for distro

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -450,6 +450,11 @@ repositories:
       type: git
       url: https://github.com/ethz-asl/asctec_mav_framework.git
       version: master
+  asr_ftc_local_planner:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_ftc_local_planner.git
+      version: master
   asr_msgs:
     doc:
       type: git
