--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -4653,6 +4653,13 @@ repositories:
       url: https://github.com/asmodehn/pyros-config.git
       version: jade
     status: developed
+  pyros_interfaces_ros:
+    release:
+      tags:
+        release: release/jade/{package}/{version}
+      url: https://github.com/asmodehn/pyros-rosinterface-rosrelease.git
+      version: 0.4.0-0
+    status: developed
   pyros_test:
     doc:
       type: git
