--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -4660,6 +4660,13 @@ repositories:
       url: https://github.com/asmodehn/pyros-rosinterface-rosrelease.git
       version: 0.4.0-0
     status: developed
+  pyros_msgs:
+    release:
+      tags:
+        release: release/jade/{package}/{version}
+      url: https://github.com/asmodehn/pyros-msgs-rosrelease.git
+      version: 0.1.1-0
+    status: developed
   pyros_test:
     doc:
       type: git
