--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -701,7 +701,7 @@ repositories:
     release:
       tags:
         release: release/jade/{package}/{version}
-      url: https://github.com/tork-a/csm-release.git
+      url: https://github.com/ros-gbp/csm-release.git
       version: 1.0.2-1
     source:
       type: git
@@ -1225,7 +1225,7 @@ repositories:
       - gravity_compensation
       tags:
         release: release/jade/{package}/{version}
-      url: https://github.com/tork-a/force_torque_tools-release.git
+      url: https://github.com/ros-gbp/force_torque_tools-release.git
       version: 1.1.0-0
     source:
       type: git
@@ -5890,7 +5890,7 @@ repositories:
     release:
       tags:
         release: release/jade/{package}/{version}
-      url: https://github.com/tork-a/roswww-release.git
+      url: https://github.com/ros-gbp/roswww-release.git
       version: 0.1.10-0
     source:
       type: git
@@ -6729,7 +6729,7 @@ repositories:
       - scan_tools
       tags:
         release: release/jade/{package}/{version}
-      url: https://github.com/tork-a/scan_tools-release.git
+      url: https://github.com/ros-gbp/scan_tools-release.git
       version: 0.3.1-0
     source:
       type: git
