--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -769,7 +769,7 @@ repositories:
     release:
       tags:
         release: release/kinetic/{package}/{version}
-      url: https://github.com/tork-a/csm-release.git
+      url: https://github.com/ros-gbp/csm-release.git
       version: 1.0.2-1
     source:
       type: git
@@ -6219,7 +6219,7 @@ repositories:
     release:
       tags:
         release: release/kinetic/{package}/{version}
-      url: https://github.com/tork-a/roswww-release.git
+      url: https://github.com/ros-gbp/roswww-release.git
       version: 0.1.10-0
     source:
       test_pull_requests: true
@@ -6993,7 +6993,7 @@ repositories:
       - scan_tools
       tags:
         release: release/kinetic/{package}/{version}
-      url: https://github.com/tork-a/scan_tools-release.git
+      url: https://github.com/ros-gbp/scan_tools-release.git
       version: 0.3.2-0
     source:
       type: git
