--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1311,13 +1311,14 @@ repositories:
       - aruco_detect
       - fiducial_detect
       - fiducial_lib
+      - fiducial_msgs
       - fiducial_pose
       - fiducial_slam
       - fiducials
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/UbiquityRobotics-release/fiducials-release.git
-      version: 0.6.1-0
+      version: 0.7.0-0
     source:
       type: git
       url: https://github.com/UbiquityRobotics/fiducials.git
