turtlebot3: 0.1.4-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7725,14 +7725,13 @@ repositories:
       - turtlebot3
       - turtlebot3_bringup
       - turtlebot3_description
-      - turtlebot3_fake
-      - turtlebot3_gazebo
       - turtlebot3_navigation
       - turtlebot3_slam
+      - turtlebot3_teleop
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ROBOTIS-GIT-release/turtlebot3-release.git
-      version: 0.1.3-0
+      version: 0.1.4-0
     source:
       test_pull_requests: true
       type: git
