--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -712,6 +712,26 @@ repositories:
       url: https://github.com/ros-perception/image_transport_plugins.git
       version: indigo-devel
     status: maintained
+  imu_tools:
+    doc:
+      type: git
+      url: https://github.com/ccny-ros-pkg/imu_tools.git
+      version: lunar
+    release:
+      packages:
+      - imu_complementary_filter
+      - imu_filter_madgwick
+      - imu_tools
+      - rviz_imu_plugin
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/uos-gbp/imu_tools-release.git
+      version: 1.1.5-0
+    source:
+      type: git
+      url: https://github.com/ccny-ros-pkg/imu_tools.git
+      version: lunar
+    status: developed
   interactive_markers:
     doc:
       type: git
