--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2454,6 +2454,22 @@ repositories:
       url: https://github.com/ros-visualization/rviz.git
       version: kinetic-devel
     status: maintained
+  sick_tim:
+    doc:
+      type: git
+      url: https://github.com/uos/sick_tim.git
+      version: lunar
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/uos-gbp/sick_tim-release.git
+      version: 0.0.10-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/uos/sick_tim.git
+      version: lunar
+    status: developed
   srdfdom:
     doc:
       type: git
