--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -928,6 +928,21 @@ repositories:
       url: https://github.com/swri-robotics/marti_messages.git
       version: master
     status: developed
+  mavlink:
+    doc:
+      type: git
+      url: https://github.com/mavlink/mavlink-gbp-release.git
+      version: release/lunar/mavlink
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/mavlink/mavlink-gbp-release.git
+      version: 2017.5.25-1
+    source:
+      type: git
+      url: https://github.com/mavlink/mavlink-gbp-release.git
+      version: release/lunar/mavlink
+    status: maintained
   media_export:
     doc:
       type: git
