--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3160,8 +3160,13 @@ linux-headers-generic:
     jessie: [linux-headers-3.16.0-4-all]
     stretch: [linux-headers-4.9.0-3-all]
     wheezy: [linux-headers-3.2.0-4-all]
-  fedora: [kernel-headers]
+  fedora: [kernel-headers, kernel-devel]
   ubuntu: [linux-headers-generic]
+linux-kernel-headers:
+  arch: [linux-api-headers]
+  debian: [linux-kernel-headers]
+  fedora: [kernel-headers]
+  ubuntu: [linux-kernel-headers]
 log4cxx:
   arch: [log4cxx]
   cygwin: [liblog4cxx-devel]
