--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1978,6 +1978,7 @@ python-pyside:
   arch: [python2-pyside]
   debian: [python-pyside]
   fedora: [python-pyside]
+  gentoo: [dev-python/pyside]
   ubuntu:
     lucid: [python-pyside]
     maverick: [python-pyside]
@@ -2055,7 +2056,7 @@ python-qt-bindings:
     squeeze: [python-qt4, python-qt4-dev, pyhton-sip-dev]
     wheezy: [python-pyside, libpyside-dev, libshiboken-dev, shiboken, python-qt4, python-qt4-dev, python-sip-dev]
   fedora: [PyQt4, PyQt4-devel, sip-devel]
-  gentoo: [PyQt4]
+  gentoo: [dev-python/pyside, dev-python/PyQt4]
   macports: [p27-pyqt4]
   opensuse: [python-qt4-devel]
   rhel: [PyQt4, PyQt4-devel, sip-devel]
@@ -2076,7 +2077,7 @@ python-qt-bindings-gl:
   arch: [python2-pyqt4]
   debian: [python-qt4-gl]
   fedora: [PyQt4]
-  gentoo: [PyQt4]
+  gentoo: [dev-python/PyQt4]
   opensuse: [python-qt4-devel]
   ubuntu:
     lucid: [python-qt4-gl]
@@ -2124,6 +2125,7 @@ python-qt-bindings-webkit:
 python-qt4-gl:
   debian: [python-qt4-gl]
   fedora: [PyQt4]
+  gentoo: [dev-python/PyQt4]
   ubuntu: [python-qt4-gl]
 python-qt5-bindings:
   arch: [python2-pyqt5]
@@ -2158,6 +2160,7 @@ python-qt5-bindings-webkit:
     jessie: [python-pyqt5.qtwebkit]
     stretch: [python-pyqt5.qtwebkit]
   fedora: [python-qt5]
+  gentoo: [dev-python/PyQt5]
   ubuntu:
     wily: [python-pyqt5.qtwebkit]
     xenial: [python-pyqt5.qtwebkit]
@@ -2167,6 +2170,7 @@ python-qwt5-qt4:
   arch: [pyqwt]
   debian: [python-qwt5-qt4]
   fedora: [PyQwt]
+  gentoo: [dev-python/pyqwt]
   ubuntu:
     lucid: [python-qwt5-qt4]
     maverick: [python-qwt5-qt4]
